fixing vertical alignment on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,29 @@
 .grid-container {
-    border:1px solid lightgrey;
+    border: 1px solid lightgrey;
     border-radius: 12px;
     margin: 20px 20%;
     padding: 12px 16px;
-}
-
-.team-score {
+  }
+  
+  .team-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .team-score {
     font-size: 2.25rem !important;
-}
+  }
+  
+  @media (max-width: 416px) {
+    .grid-container {
+      margin: 20px 2%;
+    }
+
+    .team-info {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 64px 1fr 50px;
+    }
+  }
+  
